--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,6 +7,46 @@
   margin: 0;
 }
 
+:root {
+  --leading: 1.5;
+  --leading-short: 1.3;
+  --leading-fine: 1.1;
+  --leading-flat: 1;
+  --leading-loose: 1.7;
+  --kerning: normal;
+  --kerning-tight: -0.04ch;
+  --kerning-loose: 0.1ch;
+  --text-size-base: var(--size-step-0);
+  --text-size-lede: var(--size-step-1);
+  --text-size-meta: var(--size-step--1);
+  --text-size-heading-1: var(--size-step-5);
+  --text-size-heading-2: var(--size-step-4);
+  --text-size-heading-3: var(--size-step-3);
+  --text-size-heading-4: var(--size-step-2);
+  --text-size-prose: var(--text-size-base);
+  --space-gutter: var(--space-m);
+  --space-gutter-s: var(--space-s);
+  --space-gutter-l: var(--space-l);
+  --space-regions: var(--space-xl);
+  --size-wrapper-max-width: 1135px;
+  --color-global-bg: var(--color-light);
+  --color-global-text: var(--color-dark);
+  --color-surface-bg: var(--color-mid);
+  --color-surface-bg-interact: var(--color-mid-shade);
+  --color-surface-text: var(--color-dark);
+  --color-surface-text-interact: var(--color-dark);
+  --font-base: -apple-system, BlinkMacSystemFont, avenir next, avenir, segoe ui,
+    helvetica neue, helvetica, Cantarell, Ubuntu, roboto, noto, arial, sans-serif;
+  --font-display: var(--font-base);
+  --font-lede: var(--font-base);
+  --font-weight-regular: 400;
+  --font-weight-medium: 500;
+  --font-weight-bold: 700;
+  --font-weight-black: 900;
+  --focus-ring: 2px solid currentColor;
+  --focus-ring-offset: 2px;
+}
+
 /* Prevent font size inflation */
 html {
   -moz-text-size-adjust: none;
