--- a/src/components/history/style.module.css
+++ b/src/components/history/style.module.css
@@ -2,3 +2,30 @@
     padding-block: 100px;
     background-color: #FFF8F5;
 }
+
+.flex__group{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 45px;
+}
+.history__info{
+    max-inline-size: 571px;
+}
+
+.info__title{
+    font-family: var(--second-family);
+    font-weight: 400;
+    font-size: 40px;
+    line-height: 140%;
+    letter-spacing: 0.01em;
+    color: #292e36;
+}
+
+.info__description{
+    font-family: var(--font-family);
+font-weight: 400;
+font-size: 20px;
+line-height: 150%;
+letter-spacing: 0.01em;
+color: #555;
+}
